trunk/Archive2/1c/1995206307e825/output
main.cpp: In function 'int main()':
main.cpp:12:13: error: 'Resultado' was not declared in this scope
     printf (Resultado da soma: &d);
             ^
