trunk/Archive2/1c/1995206307e825/main.cpp
#include <stdio.h>
#include <stdlib.h>

int main()
{
    int n1, n2, soma;
    printf ("Digite um numero: ");
    scanf ("%d", &n1);
    printf ("Digite outro numero para soma: ");
    scanf ("%d", &n2);
    soma = n1+n2;
    printf (Resultado da soma: &d);
    return 0;
}
